# OpenDiff

./: .gitignore  BC_COMPARISON.md  README.md  TASKS.md  index.html  opendiff-install-context.reg  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
UI/1.首页/: DESIGN.md  code.html
opd-latest-portable/: opendiff-uninstall-context.reg
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/crates/diff-engine/: Cargo.toml
src-tauri/crates/diff-engine/src/: algorithm.rs  char_diff.rs  file_diff.rs  ignore.rs  lib.rs  merge.rs  tests.rs  types.rs
src-tauri/crates/parsers/: Cargo.toml
src-tauri/crates/parsers/src/: csv.rs  excel.rs  image.rs  lib.rs  pdf.rs  tags.rs  word.rs
src-tauri/crates/script-engine/: Cargo.toml
src-tauri/crates/script-engine/src/: cli.rs  interpreter.rs  lib.rs
src-tauri/crates/session/: Cargo.toml
src-tauri/crates/session/src/: db.rs  lib.rs  manager.rs  models.rs  tests.rs
src-tauri/crates/vfs/: Cargo.toml
src-tauri/crates/vfs/src/: error.rs  ftp.rs  lib.rs  local.rs  s3.rs  sftp.rs  tests.rs  types.rs  webdav.rs
src-tauri/icons/: 32x32.rgba  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: diff.rs  folder_diff.rs  image_diff.rs  mod.rs  session.rs  table_diff.rs  vfs.rs
src/api/: index.ts
src/assets/: main.css
src/components/: AppLayout.vue  CommandPalette.vue  GlobalToast.vue  GotoLineDialog.vue  ImportanceRules.vue  KeyboardShortcuts.vue  RegistryTreeView.vue  SaveSessionDialog.vue  SearchBar.vue  SessionPicker.vue  StatusBar.vue
src/components/editor/: DiffMinimap.vue  IgnoreToolbar.vue  MergeOutputPanel.vue
src/components/tabs/: TabBar.vue
src/components/toolbar/: MenuBar.vue  SideNavBar.vue
src/composables/: useDragDrop.ts
src/i18n/: en.ts  index.ts  zh.ts
src/router/: index.ts
src/services/: imageOverlayService.ts  registryService.ts
src/stores/: settings.ts  tabs.ts
src/types/: index.ts
src/utils/: encoding.ts  exportReport.ts  syntaxHighlight.ts  theme.ts
src/views/: FolderDiffView.vue  HexDiffView.vue  HistoryView.vue  HomeView.vue  ImageDiffView.vue  RegistryDiffView.vue  SettingsView.vue  TableDiffView.vue  TextDiffView.vue  VfsConnectionView.vue
