[package]
name = "parsers"
version.workspace = true
edition.workspace = true
description = "File format parsers: CSV, Excel, Word, PDF, images, audio tags"
license.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# CSV/TSV
csv = "1.3"

# ZIP (for xlsx/ods)
zip = "2"

# Regex (for XML parsing)
regex = "1"

# Images
image = { version = "0.25", features = ["png", "jpeg", "bmp", "gif", "webp", "tiff", "ico"] }
